--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -26,10 +27,10 @@
         ><span class="logo">VRUSHABH</span></a
       >
       <!-- <div class="menuBarBtn"></div> -->
-      <i class="fa-solid fa-bars" id="bar"></i>
+      <span class="material-icons menu-icon" id="bar">menu</span>
       <div class="abtSection">
         <ul>
-          <li><i class="fa-solid fa-arrow-left" id="back"></i></li>
+          <li><span class="material-icons" id="back">arrow_back</span></li>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -38,7 +39,6 @@
         </ul>
       </div>
     </nav>
-
     <div class="container" id="home">
       <div class="main">
         <div class="myInfo">
